# tim-messanger

./: README.md
.github/instructions/: project overview.instructions.md
misc/: build.sh  build_service.sh
services/: .gitignore  README.md  docker-compose.yml
services/auth.service/: .gitignore  README.md
services/auth.service/src/: CMakeLists.txt  Dockerfile  build.sh  conanfile.txt  install.sh  main.cpp
services/prompt.service/: README.md
services/prompt.service/dev-artifacts/: host_rsa  host_rsa.pub
services/prompt.service/src/: .dockerignore  CMakeLists.txt  Dockerfile  build.sh  conanfile.txt  main.cpp
services/prompt.service/src/configuration/: config.cpp
services/prompt.service/src/include/configuration/: config.h
services/prompt.service/src/include/services/: executor_service.h  runner_service.h  ssh_listener_service.h  ssh_session.h
services/prompt.service/src/services/: executor_service.cpp  runner_service.cpp  ssh_listener_service.cpp  ssh_session.cpp
services/users.service/: README.md
services/users.service/src/: .dockerignore  CMakeLists.txt  Dockerfile  conanfile.txt  main.cpp
services/users.service/src/include/services/: print_service.h
services/users.service/src/services/: print_service.cpp
